openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sovereign-cloud-website
  labels:
    app: sovereign-cloud-website
spec:
  to:
    kind: Service
    name: sovereign-cloud-website
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
